# Prajna-Trader

./: .gitignore  Cargo.toml  README.md
base_libs/: Cargo.toml
base_libs/src/: base_enums.rs  kline_basic.rs  lib.rs
base_libs/src/base_model/: mod.rs  order_model.rs  request_error.rs
base_libs/src/base_strategy/: base_strategy.rs  common_module.rs  mod.rs  order.rs  portfolio.rs  strategy_error.rs
base_libs/src/market_data_module/: general_data.rs  general_enum.rs
base_libs/src/market_data_module/binance_data/: rest_data.rs  ws_data.rs
base_libs/src/mongo_engine/: mod.rs
base_libs/src/tools/: common_tools.rs  math_tools.rs  mod.rs  parse_data.rs  time_tools.rs
execute_service/: Cargo.toml
execute_service/src/: main.rs
libs/: Cargo.toml
libs/src/: kline_basic.rs  lib.rs
libs/src/base_strategy/: base_strategy.rs  mod.rs  portfolio.rs  strategy_error.rs
libs/src/market_data_module/: general_data.rs  general_enum.rs  mod.rs
libs/src/market_data_module/binance_data/: mod.rs  rest_data.rs  ws_data.rs
libs/src/mongo_engine/: mod.rs
libs/src/tools/: mod.rs
public/: Cargo.toml
public/src/: lib.rs
public/src/base_enum/: market_enums.rs  mod.rs  order_enums.rs
public/src/base_model/: error_model.rs  mod.rs
public/src/base_model/api_model/: mod.rs
public/src/base_model/info_model/: mod.rs
public/src/base_model/market_model/: depth_model.rs  kline_model.rs  mod.rs
public/src/base_model/trade_model/: mod.rs  order_model.rs  position_model.rs
public/src/exchange_model/: mod.rs
public/src/exchange_model/binance_model/: rest_data.rs  ws_data.rs
public/src/strategy_model/: mod.rs  strategy_portfolio.rs
public/src/tools/: api_tools.rs  math_tools.rs  mod.rs  settings_tools.rs  time_tools.rs
quant_libs/: Cargo.toml
quant_libs/src/: lib.rs
quant_libs/src/math_tools/: mod.rs
quant_libs/src/tech_analysis/: bollinger.rs  ma.rs  mod.rs  rsi.rs  super_trend.rs
services/: Cargo.toml  build.rs
services/proto/: order_service.proto
services/src/: lib.rs
services/src/api_enum/: mod.rs
services/src/market_data_engine/: market_data_engine.rs  mod.rs  rest_data_engine.rs  ws_data_engine.rs
services/src/mongo_engine/: mod.rs
services/src/order_engine/: mod.rs
services/src/order_manager/: mod.rs  order_client.rs  order_listener.rs  order_services.rs
settings/: local_settings_bak.yaml
strategies/: Cargo.toml
strategies/src/: bollinger_band_strategy.rs  five_rsi_strategy.rs  lib.rs  rma_strategy.rs  super_trend_strategy.rs  test_strategy.rs
trade_engine/: Cargo.toml
trade_engine/src/: lib.rs
trader/: Cargo.toml
trader/src/: main.rs
