[workspace]
resolver = "2"
members = ["libs", "services", "trader"]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
chrono = "0.4.37"
