[workspace]
resolver = "2"
members = ["libs", "services", "trader", "quant_libs"]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
chrono = "0.4.37"
polars = { version = "0.38.3", features = ["dtype-full"] }
futures-util = "0.3.30"
