[package]
name = "base_libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.2"
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
polars = { workspace = true }
chrono = { workspace = true }
plotters = { workspace = true }
tracing = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
serde_yaml = "0.9.33"