[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.8.2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
polars = { workspace = true }
chrono = { workspace = true }
plotters = { workspace = true }

# quant_libs = { path = "../quant_libs" }
