[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public = { path = "../public"}
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
mongodb = { workspace = true }
tonic = "0.12.0"
prost = "0.13.1"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.12.0"
