[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = { path = "../services" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
